--- a/app/views/products/browse.html.erb
+++ b/app/views/products/browse.html.erb
@@ -1,23 +1,38 @@
 <div ng-app="app" ng-controller="productsCtrl">
 
-<span class="lead">View All Products (<%= @products.length %>)</span><br><br>
+  <div class="row">
 
-<datalist id="products">
-  <option ng-repeat="product in products">{{ product.name }}</option>
-</datalist>
+    <span class="lead">View All Products (<%= @products.length %>)</span><br><br>
 
-<input ng-model="nameFilter" list="products" placeholder="Search by name" style="border: 0.2rem solid #cacaca; padding: 0.2rem">
-<br><br>
+    <datalist id="products">
+      <option ng-repeat="product in products">{{ product.name }}</option>
+    </datalist>
 
-<div ng-click="sortBy('name')">Sort A-Z</div>
+    <input ng-model="nameFilter" list="products" placeholder="Search by name" style="border: 0.2rem solid #cacaca; padding: 0.2rem; margin: 0 0.5rem">
+    <br><br>
+    
+    <div style="margin: 0 0.5rem">
+      <span ng-click="sortBy('updated_at')" class="sort-button">Sort by Newest</span> &nbsp;|&nbsp;
+      <span ng-click="sortBy('name')" class="sort-button">Sort by Name</span> &nbsp;|&nbsp;
+      <span ng-click="sortBy('brand')" class="sort-button">Sort by Brand</span> &nbsp;|&nbsp;
+      <span ng-click="sortBy('product_type')" class="sort-button">Sort by Type</span>
+    </div><br>
 
-<div ng-repeat="product in products | filter:{name: nameFilter} | orderBy:orderAttribute:ascdesc track by $index">
-  <div class="product-box">
-    <p><a href="/products/{{ product.id }}" class="thumbnail"><img src="{{ product.image }}"></a></p> 
-    <span class="lead"><a href="/products/{{ product.id }}">{{ product.name }}</a></span><br>
-    <span class="subheader"><a href="?search={{ product.brand }}">{{ product.brand }}</a></span><br>
-    <a href="/?search={{ product.product_type }}">{{ product.product_type }}</a>
+    <div class="row">
+      <div class="columns small-12 medium-4 large-3" ng-repeat="product in products | filter:{name: nameFilter} | limitTo:limit | orderBy:orderAttribute:ascdesc track by $index" style="float: left">
+        <div class="callout">
+          <p><a href="/products/{{ product.id }}"><img src="{{ product.image }}" class="thumbnail"></a></p> 
+          <span class="lead"><a href="/products/{{ product.id }}">{{ product.name }}</a></span><br>
+          <span class="subheader"><a href="?search={{ product.brand }}">{{ product.brand }}</a></span><br>
+          <a href="/?search={{ product.product_type }}">{{ product.product_type }}</a>
+        </div>
+      </div>
+    </div>
+
   </div>
-</div>
+
+  <div class="row">
+    <div ng-click='loadMore()' class="load-button">Load More Results</div>
+  </div>
 
 </div>
