--- a/app/views/products/browse.html.erb
+++ b/app/views/products/browse.html.erb
@@ -20,7 +20,7 @@
 
     <div class="row">
       <div class="columns small-12 medium-4 large-3" ng-repeat="product in products | filter:{name: nameFilter} | limitTo:limit | orderBy:orderAttribute:ascdesc track by $index" style="float: left">
-        <div class="callout">
+        <div class="callout fadeInSlow">
           <p><a href="/products/{{ product.id }}"><img src="{{ product.image }}" class="thumbnail"></a></p> 
           <span class="lead"><a href="/products/{{ product.id }}">{{ product.name }}</a></span><br>
           <span class="subheader"><a href="?search={{ product.brand }}">{{ product.brand }}</a></span><br>
@@ -35,4 +35,36 @@
     <div ng-click='loadMore()' class="load-button">Load More Results</div>
   </div>
 
+  <p id="back-top"><a href="#top"><span>Back <br>To Top</span></a></p>
+
 </div>
+
+<script type="text/javascript">
+  
+  $(document).ready(function(){
+
+    // hide #back-top first
+    $("#back-top").hide();
+    
+    // fade in #back-top
+    $(function () {
+      $(window).scroll(function () {
+        if ($(this).scrollTop() > 100) {
+          $('#back-top').fadeIn();
+        } else {
+          $('#back-top').fadeOut();
+        }
+      });
+
+      // scroll body to 0px on click
+      $('#back-top a').click(function () {
+        $('body,html').animate({
+          scrollTop: 0
+        }, 800);
+        return false;
+      });
+    });
+
+  });
+
+</script>
