--- a/app/views/products/browse.html.erb
+++ b/app/views/products/browse.html.erb
@@ -12,10 +12,10 @@
     <br><br>
     
     <div style="margin: 0 0.5rem">
-      <span ng-click="sortBy('updated_at')" class="sort-button">Sort by Newest</span> &nbsp;|&nbsp;
-      <span ng-click="sortBy('name')" class="sort-button">Sort by Name</span> &nbsp;|&nbsp;
-      <span ng-click="sortBy('brand')" class="sort-button">Sort by Brand</span> &nbsp;|&nbsp;
-      <span ng-click="sortBy('product_type')" class="sort-button">Sort by Type</span>
+      <a ng-click="sortBy('updated_at')">Sort by Newest</a> &nbsp;|&nbsp;
+      <a ng-click="sortBy('name')">Sort by Name</a> &nbsp;|&nbsp;
+      <a ng-click="sortBy('brand')">Sort by Brand</a> &nbsp;|&nbsp;
+      <a ng-click="sortBy('product_type')">Sort by Type</a>
     </div><br>
 
     <div class="row">
