--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -199,22 +199,19 @@ input {
 
 .load-button {
   border: 0.2rem solid $medium-gray;
-  width: 100%;
+  width: 97%;
   margin: 1rem;
   padding: 0.3rem;
   color: $accent-color;
   text-align: center;
   transition: 1s ease; 
+  float: left;
 }
 
 .load-button:hover {
   border: 0.2rem solid $accent-color;
   color: $dark-gray;
   transition: 1s ease; 
-}
-
-.sort-button:hover {
-  color: $accent-color;
 }
 
 //start top bar
