--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
     <div class="row small-up-1 medium-up-2 large-up-2" style="margin: 0 5px 0 0">
       <h3><%= link_to 'Traincase', '/traincase' %></h3>
 
-      <% if @wishlist.length > 0 %>
+      <% if @traincase.length > 0 %>
       <p class="lead">Recently Added</p>
         <% @traincase.each do |item| %>
           <div class="columns">
@@ -45,8 +45,8 @@
         <% @wishlist.each do |item| %>
           <div class="columns">
             <div class="callout">
-              <p><a href="/products/<%= item.id %>"><%= image_tag "#{item.image}", class: 'thumbnail' %></a><br>
-              <%= link_to item.name.upcase, "/products/#{item.id}" %><br>
+              <p><a href="/products/<%= item.id %>"><%= image_tag "#{item.image}", class: 'thumbnail' %></a></p>
+              <p><%= link_to item.name.upcase, "/products/#{item.id}" %><br>
               <%= item.brand %></p>
             </div>
           </div>
