added more angular sorting

--- a/app/views/products/browse.html.erb
+++ b/app/views/products/browse.html.erb
@@ -12,10 +12,11 @@
     <br><br>
     
     <div style="margin: 0 0.5rem">
-      <a ng-click="sortBy('updated_at')">Sort by Newest</a> &nbsp;|&nbsp;
+      <a ng-click="sortNew('updated_at')">Sort by Newest</a> &nbsp;|&nbsp;
       <a ng-click="sortBy('name')">Sort by Name</a> &nbsp;|&nbsp;
       <a ng-click="sortBy('brand')">Sort by Brand</a> &nbsp;|&nbsp;
-      <a ng-click="sortBy('product_type')">Sort by Type</a>
+      <a ng-click="sortBy('product_type')">Sort by Type</a> &nbsp;|&nbsp;
+      <a ng-click="showAll()">Show All</a>
     </div><br>
 
     <div class="row">
